--- a/src/templates/forgotPassword.ejs
+++ b/src/templates/forgotPassword.ejs
@@ -64,7 +64,7 @@
       <p>
         Regards,
         <br />
-        Digismart Community
+        Sachtech Community
       </p>
     </div>
   </body>
