--- a/src/templates/registration.ejs
+++ b/src/templates/registration.ejs
@@ -58,12 +58,10 @@
       >
       Please use this code for Authorization:<br /><br />
 
-    </small></label><br /><br /><label>if you dont want to recive email then unsubscribe Digismart </label><br />
-    </small></label><br /><br /><label>click here to unsubscribe </label><br />
 
-    </small></label><br /><br /><label>Thanks & Regards</label><br /><label>DIGI Smart Disc Community</label>
+    </small></label><br /><br /><label>Thanks & Regards</label><br /><label>Sachtech Community</label>
 
-        ><br />
+        <br />
       </p>
     </div>
   </body>
