dynamic ejs template

--- a/src/templates/forgotPassword.ejs
+++ b/src/templates/forgotPassword.ejs
@@ -64,7 +64,7 @@
       <p>
         Regards,
         <br />
-        Sachtech Community
+        <%= project_name %> Community
       </p>
     </div>
   </body>
