--- a/src/templates/registration.ejs
+++ b/src/templates/registration.ejs
@@ -59,7 +59,7 @@
       Please use this code for Authorization:<br /><br />
 
 
-    </small></label><br /><br /><label>Thanks & Regards</label><br /><label>Sachtech Community</label>
+    </small></label><br /><br /><label>Thanks & Regards</label><br /><label><%= project_name %> Community</label>
 
         <br />
       </p>
