--- a/src/templates/registration.ejs
+++ b/src/templates/registration.ejs
@@ -21,7 +21,7 @@
       "
     >
       <div style="text-align: center; padding: 10px">
-        <img src="cid:<%= cidLogo %>" alt="logo" style="max-height: 75px" />
+        <img src="cid:<%= cidLogo %>" alt="logo" style="max-height: 75px; max-width: 75px;" />
       </div>
 
       <span
